Fix homepage not centered

--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,6 @@ main.homepage {
     font-size: 14pt;
     text-align: center;
     padding: 24% 0 0 0;
-    display: inline-block;
     height: 100%;
     width: 100%;
 }
